--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/quiz
 spring.datasource.username=dargenn
 spring.datasource.password=root
+
+spring.flyway.url = jdbc:mysql://localhost:3306/quiz
+spring.flyway.schemas = quiz
+spring.flyway.user = dargenn
+spring.flyway.password = root
