--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.flyway.url = jdbc:mysql://localhost:3306/quiz
 spring.flyway.schemas = quiz
 spring.flyway.user = dargenn
 spring.flyway.password = root
+
+spring.thymeleaf.cache=false
